[package]
authors = ["Olger Warnier <olger@spectare.nl>"]
edition = "2018"
name = "tile-slack"
version = "0.1.0"

[dependencies]
actix-cors = "0.6.0-beta.2"
actix-multipart = "0.4.0-beta.5"
actix-rt = "2.2.0"
actix-service = "2.0.0-beta.5"
actix-web = "4.0.0-beta.9"
actix-web-httpauth = "0.6.0-beta.2"
artano = "0.3.3"
async-trait = "0.1.50"
bytes = "1.1.0"
derive_more = "0.99.16"
env_logger = "0.8.3"
futures = "0.3.15"
futures-core = {version = "0.3.7", default-features = false, features = ["alloc"]}
futures-util = {version = "0.3.7", default-features = false, features = ["alloc"]}
log = "0.4.11"
reqwest = {version = "0.11.4", features = ["json", "blocking"]}
rusttype = "0.9.2"
sanitize-filename = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1.0.29"
tokio = {version = "1.6.0", features = ["full"]}
